yaml-examples/qbittorrent/qbittorrent-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: qbittorrent
  labels:
    app: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      containers:
      - name: qbittorrent
        image: ghcr.io/linuxserver/qbittorrent
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
          - containerPort: 6881
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /downloads
            name: downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: qbittorrent
      - name: downloads
        hostPath:
          path: /mnt/share/Downloads
