yaml-examples/qbittorrent/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: default
spec:
  selector:
    app: qbittorrent
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  - name: "6881-tcp"
    port: 6881
    targetPort: 6881
    protocol: TCP
#  - name: "6881-udp"
#    port: 6881
#    targetPort: 6881
#    protocol: UDP
